...
        android:text="@string/textview_book_item_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editTextText_bookName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
...
        app:layout_constraintStart_toEndOf="@+id/textview_book_item_name"
        app:layout_constraintTop_toTopOf="@+id/textview_book_item_name"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button_item_details_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:text="@string/button_OK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
