<resources>
    <string name="app_name">我的第一个应用</string>

    <string name="JavaForActivity">使用Java创建hello world</string>

    <string name="hello_android">你好Android</string>

    <string name="text_Hello">Hello</string>
    <string name="text_JNU">JNU</string>
    <string name="change_text">change text</string>

    <string name="button_1">Button响应事件方式1</string>
    <string name="button_2">Button响应事件方式2</string>
    <string name="button_3">Button响应事件方式3</string>
    <string name="button_4">Button响应事件方式4</string>
    <string name="textview">TextView</string>

    <string name="textview_book_item_name">图书名称</string>
    <string name="edittext_name">Edit here</string>
    <string name="button_OK">确定</string>
    <string name="button_CANCEL">取消</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_layout">tab_layout</string>
    <string name="tencentMap">TencentMap</string>
    <string name="score">已学到的书本数：</string>
    <string name="start_game">开始游戏</string>

</resources>