<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="145dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="600dp"
        android:clickable="true"
        android:contentDescription="TODO"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_add" />


</FrameLayout>